# otus-cpp-basic-attempt2

./: README.md
Homework2/: CMakeLists.txt  main.cpp  move_me.cpp
homework2/: CMakeLists.txt  hello.cpp  main.cpp
homework3/: CMakeLists.txt  check_value.cpp  check_value.h  high_scores.cpp  high_scores.txt  random_value.cpp  random_value.h
homework5/: CMakeLists.txt  statistics.cpp
homework6/: CMakeLists.txt  MyContainer.cpp  MyContainer.h  main.cpp  my_list.cpp  my_list.h
